docs: fixed padding on mobile

--- a/projects/docs/src/styles.scss
+++ b/projects/docs/src/styles.scss
@@ -7,7 +7,7 @@
 
 @layer components {
   .container {
-    @apply max-w-7xl sm:px-6 lg:px-8 px-4 mx-auto;
+    @apply max-w-7xl sm:px-6 lg:px-8 mx-auto;
   }
 
   .btn {
